--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
     --color-white:#fff;
     --color-yellow:#ffc601;
     --color-blue:#253dc0;
+    --color-black:#464545;
     --color-light:#e1e1e1;
     --fweight-regular:400;
     --fweight-bold:700;
@@ -32,5 +33,24 @@ main{
 section{
     width: 100%;
     height: 100%;
+    padding-top: 100px;
     /* display: inline-block; */
+}
+
+.navigation-btn{
+    color: #fff;
+    padding: 10px 30px;
+    font-size: 1.3rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--color-orange);
+    width: auto;
+    flex-shrink: 1;
+}
+
+.coloured{
+    color: var(--color-orange);
+    font-size: 1rem !important;
+    font-weight: var(--fweight-regular);
 }
