--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,6 +7,7 @@ nav{
     background-color: #fff;
     padding: 0.7rem 15px;
     box-sizing: border-box;
+    z-index: 10;
 }
 
 .nav-items{
@@ -26,4 +27,136 @@ nav{
    font-weight: var(--fweight-regular);
    color: #141414; 
    font-size: 0.9rem;
+   margin: 0;
+}
+
+.bars{
+    font-size: 2rem;
+    color: var(--color-orange);
+    display: none;
+}
+
+.partial-search-bar{
+    width: 35%;
+    border: 1px solid black;
+    display: flex;
+    border: 2px solid #c1c1f5;
+    /* padding: 0.5rem; */
+    border-radius: 5px;
+    height:2.5rem;
+}
+
+.partial-search-bar input{
+    width: 70%;
+    border: none;
+    /* font-size: 1rem; */
+    padding: 0 1rem;
+    overflow: hidden;
+    
+}
+.partial-search-bar-input-icon{
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-light);
+    color: var(--color-black);
+    border-left: 2px solid #c1c1f5;
+    /* font-size: 1rem; */
+}
+
+input:focus{
+    outline: none;
+}
+
+.responsive-navbar{
+    width: 100%;
+    height: 100vh;
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.responsive-navbar-overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0,0.5);
+}
+
+.responsive-navbar-sidebar{
+    width: 25%;
+    background-color: #fff;
+    z-index: 100;
+    position: fixed;
+    /* top:4.8rem; */
+    left: 0;
+    height: 100%;
+    z-index: 12;
+    min-width:300px;
+}
+.responsive-navbar a{
+    text-decoration: none;
+    color: #000;
+    padding: 15px 20px;
+    font-size: 1.2rem;
+}
+
+.responsive-navbar-sidebar li{
+    border-bottom: 1px solid var(--color-light);
+    margin: 0;
+    padding: 1rem;
+
+}
+
+.signup-btn{
+    display: none;
+    font-size: 0.8rem;
+}
+
+.responsive-navbar-sidebar ul{
+    padding: 0;
+}
+a{
+    cursor: pointer;
+}
+
+@media screen and (max-width:1200px) {
+    .bars{
+        display: block;
+    }
+    .nav-item{
+        display: none;
+    }
+    nav{
+        justify-content: flex-start;
+        gap: 1.5rem;
+    }
+    .signup-btn{
+        font-size: 1rem;
+        position:fixed;
+        right:1rem;
+        display: block;
+        font-weight: var(--fweight-bold );
+    }
+    .partial-search-bar{
+        width: 60%;
+        /* flex-shrink: 1; */
+    }
+}
+@media screen and (max-width:480px) {
+    .logo img{
+        max-width: 100px;
+    }
+    .signup-btn{
+        font-size: 1rem !important;
+    }
+    
+}
+@media screen and (max-width:768px){
+    .partial-search-bar{
+        display: none !important;
+    }
 }
