--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,11 @@
 html{
     font-family: sans-serif;
     line-height: 1;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+
 
 }
 
