--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,6 +10,11 @@ nav{
     z-index: 10;
 }
 
+/* .logo{
+    display: flex;
+    justify-content: flex-start;
+} */
+
 .nav-items{
     margin: 0;
     padding: 0;
@@ -62,6 +67,7 @@ nav{
     background-color: var(--color-light);
     color: var(--color-black);
     border-left: 2px solid #c1c1f5;
+    overflow: hidden;
     /* font-size: 1rem; */
 }
 
@@ -123,6 +129,82 @@ a{
     cursor: pointer;
 }
 
+/* styleing hamburger menu */
+#nav-icon1{
+    width: 40px;
+  height: 40px;
+  position: relative;
+  /* margin: 50px auto; */
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  
+}
+
+#nav-icon1 span{
+    display: block;
+  position: absolute;
+  height: 5px;
+  width: 100%;
+  background: var(--color-orange);
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+/*  */
+
+#nav-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon1 span:nth-child(2) {
+  top: 14px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 28px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+  background: var(--color-blue);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+  background: var(--color-blue);
+}
+
+#nav-icon1.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  background: var(--color-blue);
+}
+
+
 @media screen and (max-width:1200px) {
     .bars{
         display: block;
@@ -136,10 +218,12 @@ a{
     }
     .signup-btn{
         font-size: 1rem;
-        position:fixed;
+        position:relative;
         right:1rem;
         display: block;
         font-weight: var(--fweight-bold );
+        flex: 1;
+        text-align: right;
     }
     .partial-search-bar{
         width: 60%;
