--- a/styles/blogs.css
+++ b/styles/blogs.css
@@ -1,27 +1,18 @@
 
-sec.blog{
+.blog{
     width: 100%;
     height: auto;
     margin: 0;
     padding: 50px 0;
-    /* border: 2px solid black; */
     background-color: #f5f5f5;
 }
 
 .blog-items{
     width: 100%;
-    /* border: 2px solid orange; */
-    display: flex;
-    overflow:scroll;
     margin-top: 1.5rem;
     padding-top: 1.5rem;
-    transition: all 1s;
 }
 .blog-item{
-    flex-shrink:0 ;
-    width: calc(100%/3);
-    /* height: 100px; */
-    /* border: 2px solid green; */
     display: flex;
     flex-direction: column;
     gap: 2rem;
