--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@
 html{
     font-family: sans-serif;
     line-height: 1;
-    width: 100%;
+    /* width: 100%; */
     margin: 0;
     padding: 0;
     height: 100%;
@@ -26,20 +26,19 @@ html{
     padding: 0;
     box-sizing: border-box;
     font-weight: var(--fweight-regular);
-    /* font-family: 'Mulish', sans-serif !important; */
 }
 
 main{
     height: 100%;
     width: 100%;
-    /* border: 5px solid black; */
+    
 }
 
 section{
     width: 100%;
     height: 100%;
     padding-top: 100px;
-    /* display: inline-block; */
+    
 }
 
 .navigation-btn{
