--- a/styles/media-coverage1.css
+++ b/styles/media-coverage1.css
@@ -20,28 +20,28 @@
     background-color: transparent;
     width: 100%;
     display: flex;
-    border: 1px solid #979494;
+    border: 2px solid #979494;
     border-radius: 0.5rem;
     padding: 20px 14px;
 }
 
- /* .media-coverage1-input-field:focus {
-    border: 3px solid #112542;
-    
-} */
+
 .media-coverage1-input input{
     width: 90%;
     border: none;
     outline: none;
-    /* color: var(--color-light);
-*/
+   
+
 }
+.media-coverage1-input:focus-within{
+    border: 2px solid #000;
+}
+
 .media-coverage1-input-icon{
     width: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* font-size: 1.2rem; */
     color: var(--color-blue);
 }
 .media-coverage1-image{
